增加JAVA11、JAVA21并修复了随之而来的bug（未完全修复）