@@ -8,7 +8,9 @@ configurations.default.setCanBeResolved(true)
 
 project.setArchivesBaseName('lwjgl')
 
-project.setLibsDirName("${rootDir}/H2CO3/src/main/assets/app_runtime/boat/lwjgl")
+def libsDir = "${rootDir}/H2CO3/src/main/assets/app_runtime/boat/lwjgl"
+
+project.setLibsDirName(libsDir)
 
 tasks.register('buildLwjgl') { dependsOn 'jar' }
 jar {
@@ -17,8 +19,8 @@ jar {
         manifest {
             attributes 'Manifest-Version': '3.2.4'
         }
-        destinationDirectory.set(file("../H2CO3/src/main/assets/app_runtime/boat/lwjgl"))
-        File versionFile = file("../H2CO3/src/main/assets/app_runtime/boat/lwjgl/version")
+        destinationDirectory.set(file(libsDir))
+        File versionFile = file("$libsDir/version")
         versionFile.write(String.valueOf(new Date().getTime()))
     }
 }
@@ -29,9 +31,13 @@ java {
     }
 }
 
+tasks.withType(JavaExec) {
+    jvmArgs += "--add-modules=jdk.unsupported"
+}
+
 dependencies {
-    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
-    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 java {
